# admin-rust

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
examples/: connect_mysql.rs  demo.rs
migrations/: 20250222075108_init.down.sql  20250222075108_init.up.sql
src/: lib.rs  mypool.rs  state.rs  utils.rs
tests/: actions.rs
