[package]
name = "admin_rust"
version = "0.1.0"
authors = ["<Qiqianily> <Joedian@163.com>"]
license = "MIT"
edition = "2024"
resolver = "2"

[dependencies]
axum = "0.8.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
anyhow = "1.0.95"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.89"
tokio = { version = "1.43.0",  features = ["macros","rt-multi-thread"]  }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "mysql","chrono"]}
